added styles to calculator, fixed build